--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -23,7 +23,7 @@
 									<div class="form-group">
 										<label for="regFrm_Email" class="col-sm-3 control-label">电子邮箱</label>
 										<div class="col-sm-9">
-											<input type="text" class="form-control" id="regFrm_Email" name="Email" placeholder="电子邮箱">
+											<input type="text" class="form-control" id="regFrm_Email" name="Email" placeholder="电子邮箱" required data-original-title='电子邮箱不能为空。'>
 										</div>
 									</div>
 									<div class="form-group wrong">
@@ -32,7 +32,7 @@
 									<div class="form-group">
 										<label for="regFrm_UserPass" class="col-sm-3 control-label">登陆密码</label>
 										<div class="col-sm-9">
-											<input type="password" class="form-control" id="regFrm_UserPass" name="UserPass" placeholder="登陆密码">
+											<input type="password" class="form-control" id="regFrm_UserPass" name="UserPass" placeholder="登陆密码" required data-original-title='登陆密码不能为空。'>
 										</div>
 									</div>
 									<div class="form-group wrong">
@@ -41,7 +41,7 @@
 									<div class="form-group">
 										<label for="regFrm_UserPass2" class="col-sm-3 control-label">确认密码</label>
 										<div class="col-sm-9">
-											<input type="password" class="form-control" id="regFrm_UserPass2" name="UserPass2" placeholder="确认密码">
+											<input type="password" class="form-control" id="regFrm_UserPass2" name="UserPass2" placeholder="确认密码" required data-original-title='确认密码不能为空。'>
 										</div>
 									</div>
 									<div class="form-group wrong">
@@ -50,7 +50,7 @@
 									<div class="form-group">
 										<label for="regFrm_VerifyCode" class="col-sm-3 control-label">验证码</label>
 										<div class="col-sm-4">
-											<input type="text" class="form-control" id="regFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
+											<input type="text" class="form-control" id="regFrm_VerifyCode" name="VerifyCode" placeholder="验证码" required data-original-title='验证码不能为空。'>
 										</div>
 										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:showVerifyCode();">换张图</a></label>
 									</div>
