--- a/web/views/user/ResendRegEmail.html
+++ b/web/views/user/ResendRegEmail.html
@@ -63,28 +63,28 @@
 						<div class="panel-heading"><b>激活帐号</b></div>
 						<div class="panel-body">
 							<div class="col-md-4 col-sm-5">
-								<form class="form-horizontal" role="form" id="actFrm" onsubmit="return false;" data-url="activate">
+								<form class="form-horizontal" role="form" id="resendFrm" onsubmit="return false;" data-url="resendEmail">
 									<div class="form-group">
 										<label class="col-sm-12" style='font-size:12px;color:#c00'>请输入您注册的邮箱地址，系统将发送激活账号的链接到邮箱中</label>
 									</div>
 									<div class="form-group">
-										<label for="actFrm_Email" class="col-sm-3 control-label">电子邮箱</label>
+										<label for="resendFrm_Email" class="col-sm-3 control-label">电子邮箱</label>
 										<div class="col-sm-9">
-											<input type="text" class="form-control" id="actFrm_Email" name="Email" placeholder="电子邮箱" value='${user.Email}'>
+											<input type="text" class="form-control" id="resendFrm_Email" name="Email" placeholder="电子邮箱" value='${user.Email}'>
 										</div>
 									</div>
 									<div class="form-group wrong">
-										<label id="actFrm_Email_Vali" class="col-sm-offset-3 col-sm-9"></label>
+										<label id="resendFrm_Email_Vali" class="col-sm-offset-3 col-sm-9"></label>
 									</div>
 									<div class="form-group">
-										<label for="actFrm_VerifyCode" class="col-sm-3 control-label">验证码</label>
+										<label for="resendFrm_VerifyCode" class="col-sm-3 control-label">验证码</label>
 										<div class="col-sm-4">
-											<input type="text" class="form-control" id="actFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
+											<input type="text" class="form-control" id="resendFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
 										</div>
 										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:showVerifyCode();">换张图</a></label>
 									</div>
 									<div class="form-group wrong">
-										<label id="actFrm_VerifyCode_Vali" class="col-sm-offset-3 col-sm-9"></label>
+										<label id="resendFrm_VerifyCode_Vali" class="col-sm-offset-3 col-sm-9"></label>
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
@@ -93,7 +93,7 @@
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
-											<button id="btn_act" type="button" class="btn btn-primary">发送邮件</button>
+											<button id="btn_resend" type="button" class="btn btn-primary">发送邮件</button>
 										</div>
 									</div>
 									<div class="form-group">
@@ -143,24 +143,24 @@
 				});
 				if('string' === typeof valiResu) return alert(valiResu);
 				if('[object Array]' === Object.prototype.toString.call(valiResu)){
-					$('#actFrm_'+ valiResu[1] +'_Vali').text(valiResu[0]).css('display', 'block').parent().css('display', 'block');
-					$('#actFrm_'+ valiResu[1]).focus();
+					$('#resendFrm_'+ valiResu[1] +'_Vali').text(valiResu[0]).css('display', 'block').parent().css('display', 'block');
+					$('#resendFrm_'+ valiResu[1]).focus();
 					return;
 				}
 				alert(valiResu.message);
 			}
 			function subFrm(){
-				$('#actFrm').olxForm('submit', [function(){
-					if(!$('#actFrm_Email').val().trim().length) return ['电子邮箱不能为空。', 'Email'];
-					if(!$('#actFrm_VerifyCode').val().trim().length) return ['验证码不能为空。', 'VerifyCode'];
+				$('#resendFrm').olxForm('submit', [function(){
+					if(!$('#resendFrm_Email').val().trim().length) return ['电子邮箱不能为空。', 'Email'];
+					if(!$('#resendFrm_VerifyCode').val().trim().length) return ['验证码不能为空。', 'VerifyCode'];
 				}, function (valiResu){
 					showVali(valiResu);
 				}, function (data){
 					if(!data.success) return showVali(data.msg);
-					location.href = $('#actFrm_Email').val().trim() +'/register/resendEmail/success';
+					location.href = $('#resendFrm_Email').val().trim() +'/register/resendEmail/success';
 				}]);
 			}
-			$('#btn_act').click(subFrm);
+			$('#btn_resend').click(subFrm);
 		</script>
 	</body>
 </html>
