--- a/web/views/user/ResendRegEmail_Success.html
+++ b/web/views/user/ResendRegEmail_Success.html
@@ -50,7 +50,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="panel panel-default">
-						<div class="panel-heading"><b>@zhaobe：帐号激活邮件已重发啦！</b></div>
+						<div class="panel-heading"><b>@zhaobe：帐号激活邮件已重发！</b></div>
 						<div class="panel-body">
 							<div class="col-md-2 col-sm-4" id='div_left'>
 								<img title='恭喜恭喜恭喜你呀' src='/public/asset/images/128x128/happy.png'>
