--- a/blog/views/pagelet/TopBanner.html
+++ b/blog/views/pagelet/TopBanner.html
@@ -1,79 +1,79 @@
-#if("index" == ${moduleName})
-    #set($indexActiveClass = " class='active'")
-    #set($archivesActiveClass = "")
-    #set($categoryActiveClass = "")
-    #set($tagActiveClass = "")
-#elseif("archives" == ${moduleName})
-    #set($indexActiveClass = "")
-    #set($archivesActiveClass = " class='active'")
-    #set($categoryActiveClass = "")
-    #set($tagActiveClass = "")
-#elseif("category" == ${moduleName})
-    #set($indexActiveClass = "")
-    #set($archivesActiveClass = "")
-    #set($categoryActiveClass = " active")
-    #set($tagActiveClass = "")
-#elseif("tag" == ${moduleName})
-    #set($indexActiveClass = "")
-    #set($archivesActiveClass = "")
-    #set($categoryActiveClass = "")
-    #set($tagActiveClass = " class='active'")
+#if('index' == ${moduleName})
+    #set($indexActiveClass = ' class="active"')
+    #set($archivesActiveClass = '')
+    #set($categoryActiveClass = '')
+    #set($tagActiveClass = '')
+#elseif('archives' == ${moduleName})
+    #set($indexActiveClass = '')
+    #set($archivesActiveClass = ' class="active"')
+    #set($categoryActiveClass = '')
+    #set($tagActiveClass = '')
+#elseif('category' == ${moduleName})
+    #set($indexActiveClass = '')
+    #set($archivesActiveClass = '')
+    #set($categoryActiveClass = ' active')
+    #set($tagActiveClass = '')
+#elseif('tag' == ${moduleName})
+    #set($indexActiveClass = '')
+    #set($archivesActiveClass = '')
+    #set($categoryActiveClass = '')
+    #set($tagActiveClass = ' class="active"')
 #else
-    #set($indexActiveClass = "")
-    #set($archivesActiveClass = "")
-    #set($categoryActiveClass = "")
-    #set($tagActiveClass = "")
+    #set($indexActiveClass = '')
+    #set($archivesActiveClass = '')
+    #set($categoryActiveClass = '')
+    #set($tagActiveClass = '')
 #end
-<div id="banner" class="navbar navbar-inverse navbar-fixed-top" role="banner">
-	<div class="container">
-		<div class="navbar-header">
-			<button class="navbar-toggle" data-target="#navbar-collapse" data-toggle="collapse" type="button">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
+<div id='banner' class='navbar navbar-inverse navbar-fixed-top' role='banner'>
+	<div class='container'>
+		<div class='navbar-header'>
+			<button class='navbar-toggle' data-target='#navbar-collapse' data-toggle='collapse' type='button'>
+				<span class='sr-only'>Toggle navigation</span>
+				<span class='icon-bar'></span>
+				<span class='icon-bar'></span>
+				<span class='icon-bar'></span>
 			</button>
-			<a class="navbar-brand" href="http://www.foreworld.net">$title</a>
+			<a class='navbar-brand' href='http://www.foreworld.net'>$title</a>
 		</div>
 
-		<div id="navbar-collapse" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
+		<div id='navbar-collapse' class='collapse navbar-collapse'>
+			<ul class='nav navbar-nav'>
 				<li${indexActiveClass}>
-					<a href="${virtualPath}index.html">首页</a>
+					<a href='${virtualPath}index.html'>首页</a>
 				</li>
-				<li class="dropdown${categoryActiveClass}">
-					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">分类 <b class="caret"></b></a>
-					<ul class="dropdown-menu">
+				<li class='dropdown${categoryActiveClass}'>
+					<a href='javascript:;' class='dropdown-toggle' data-toggle='dropdown'>分类 <b class='caret'></b></a>
+					<ul class='dropdown-menu'>
 					    #parse('pagelet/topNavCategory.html')
 					</ul>
 				</li>
 				<li${tagActiveClass}>
-					<a href="${virtualPath}archive/tag/">标签</a>
+					<a href='${virtualPath}archive/tag/'>标签</a>
 				</li>
 				<li>
-					<a href="javascript:;">留言</a>
+					<a href='javascript:;'>留言</a>
 				</li>
 				<li>
-					<a href="javascript:;">画廊</a>
+					<a href='javascript:;'>画廊</a>
 				</li>
 				<li${archivesActiveClass}>
-					<a href="${virtualPath}archive/">档案馆</a>
+					<a href='${virtualPath}archive/'>档案馆</a>
 				</li>
 			</ul>
 
-			<ul class="nav navbar-nav navbar-right">
+			<ul class='nav navbar-nav navbar-right'>
 				<li>
-					<a href="javascript:;">关于</a>
+					<a href='javascript:;'>关于</a>
 				</li>
-				<li class="active">
-					<a href="${virtualPath}user/login">登陆</a>
+				<li class='active'>
+					<a href='${virtualPath}user/login'>登陆</a>
 				</li>
 			</ul>
-			<form id="bannerSearchForm" class="navbar-form navbar-right" role="search" data-olx-type="olx.form">
-				<div class="form-group">
-					<input class="form-control" type="text" placeholder="搜索">
+			<form id='bannerSearchForm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form'>
+				<div class='form-group'>
+					<input class='form-control' type='text' placeholder='搜索'>
 				</div>
-				<button class="btn btn-default" type="submit"><div class="glyphicon glyphicon-search"></div></button>
+				<button class='btn btn-default' type='submit'><div class='glyphicon glyphicon-search'></div></button>
 			</form>
 		</div>
 	</div>
