--- a/blog/views/pagelet/IndexFooter.html
+++ b/blog/views/pagelet/IndexFooter.html
@@ -5,7 +5,8 @@
 			<p><a href='http://www.miibeian.gov.cn'>豫ICP备09015367号</a></p>
 		</div>
 		<div>
-			<a href='tencent://message/?uin=3203317&Site=http://www.foreworld.net&Menu=yes'><img src='${virtualPath}public/assets/images/share/16x16/qq.png' alt='点击这里给我发消息' title='点击这里给我发消息'></a>
+			<a href='tencent://message/?uin=3203317&Site=http://www.foreworld.net&Menu=yes'>
+				<img src='${virtualPath}public/assets/images/share/16x16/qq.png' alt='点击这里给我发消息' title='点击这里给我发消息'></a>
 			<a href='mailto:3203317@qq.com'><img src='${virtualPath}public/assets/images/share/16x16/email.png'></a>
 			<a href='javascript:;'><img src='${virtualPath}public/assets/images/share/16x16/feed.png'></a>
 			<a href='javascript:;'><img src='${virtualPath}public/assets/images/share/16x16/twitter.png'></a>
