--- a/blog/views/pagelet/TopBanner.html
+++ b/blog/views/pagelet/TopBanner.html
@@ -69,11 +69,12 @@
 					<a href='${virtualPath}user/login'>登陆</a>
 				</li>
 			</ul>
-			<form id='bannerSearchForm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form'>
+			<form id='topSearchFrm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form'>
 				<div class='form-group'>
 					<input class='form-control' type='text' placeholder='搜索'>
 				</div>
-				<button class='btn btn-default' type='submit'><div class='glyphicon glyphicon-search'></div></button>
+				<button class='btn btn-default' type='submit'>
+					<div class='glyphicon glyphicon-search'></div></button>
 			</form>
 		</div>
 	</div>
