--- a/blog/views/pagelet/TopBanner.html
+++ b/blog/views/pagelet/TopBanner.html
@@ -69,7 +69,7 @@
 					<a href='${virtualPath}user/login'>登陆</a>
 				</li>
 			</ul>
-			<form id='topSearchFrm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form'>
+			<form id='topSearchFrm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form' onsubmit='return false;'>
 				<div class='form-group'>
 					<input class='form-control' type='text' placeholder='搜索'>
 				</div>
