--- a/blog/public/user/login.less
+++ b/blog/public/user/login.less
@@ -12,13 +12,13 @@ form {
 		margin-bottom: 0;
 	}
 
-	.wrong{
+	.wrong_tip {
 		color: #f00;
 		margin-top: -15px;
 		font-size: 12px
 	}
 
-	#img_VerifyCode{
+	#img_VerifyCode {
 		border: 1px solid #ccc;
 		width: 100%;
 		height: 35px;
@@ -33,7 +33,7 @@ form {
 	width: 100%
 }
 
-#inp_tip {
+#help_tip {
 	a {
 		color: #1a66b3;
 		text-decoration: underline
