--- a/blog/views/user/Login.html
+++ b/blog/views/user/Login.html
@@ -22,7 +22,7 @@
 											<input type='text' class='form-control' id='logFrm_Email' name='Email' placeholder='电子邮箱' required data-original-title='电子邮箱不能为空。'>
 										</div>
 									</div>
-									<div class='form-group wrong'>
+									<div class='form-group wrong_tip'>
 										<label id='logFrm_Email_Vali' class='col-sm-offset-3 col-sm-9'></label>
 									</div>
 									<div class='form-group'>
@@ -31,7 +31,7 @@
 											<input type='password' class='form-control' id='logFrm_UserPass' name='UserPass' placeholder='登陆密码' required data-original-title='登陆密码不能为空。'>
 										</div>
 									</div>
-									<div class='form-group wrong'>
+									<div class='form-group wrong_tip'>
 										<label id='logFrm_UserPass_Vali' class='col-sm-offset-3 col-sm-9'></label>
 									</div>
 									<div class='form-group'>
@@ -41,7 +41,7 @@
 										</div>
 										<label id='lab_changeImg' class='col-sm-5 control-label'>看不清？<a href='javascript:showVerifyCode();'>换张图</a></label>
 									</div>
-									<div class='form-group wrong'>
+									<div class='form-group wrong_tip'>
 										<label id='logFrm_VerifyCode_Vali' class='col-sm-offset-3 col-sm-9'></label>
 									</div>
 									<div class='form-group'>
@@ -66,7 +66,7 @@
 									</div>
 								</form>
 			                </div>
-							<div id='inp_tip' class='col-md-offset-3 col-sm-offset-3 col-md-5 col-sm-4'>
+							<div id='help_tip' class='col-md-offset-3 col-sm-offset-3 col-md-5 col-sm-4'>
 								<div>没有帐号？<a href='register?redirectURL=${refererUrl}'>注册新会员</a></div>
 								<div>&nbsp;</div>
 								<div><b>为什么总提示验证码错误？</b></div>
