--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -22,10 +22,10 @@
                                 #parse("pagelet/archiveList.html")
 		                    </div>
                             <div>
-			                    <a href="javascript:;"><img src="${virtualPath}asset/images/16x16/twitter.png"></a>
-			                    <a href="javascript:;"><img src="${virtualPath}asset/images/16x16/qqwb.png"></a>
-			                    <a href="javascript:;"><img src="${virtualPath}asset/images/16x16/sinawb.png"></a>
-			                    <a href="javascript:;"><img src="${virtualPath}asset/images/16x16/baidu.png"></a>
+			                    <a href="javascript:;"><img src="${virtualPath}public/assets/images/share/16x16/twitter.png"></a>
+			                    <a href="javascript:;"><img src="${virtualPath}public/assets/images/share/16x16/qqwb.png"></a>
+			                    <a href="javascript:;"><img src="${virtualPath}public/assets/images/share/16x16/sinawb.png"></a>
+			                    <a href="javascript:;"><img src="${virtualPath}public/assets/images/share/16x16/baidu.png"></a>
 		                    </div>
 	                    </div>				
                     </div>
@@ -41,7 +41,7 @@
 
 					<div id="qrcode">
 						<figure>
-							<img src="${virtualPath}asset/images/archive.png" alt="二维码" title="档案馆">
+							<img src="${virtualPath}public/assets/images/archive.png" alt="二维码" title="档案馆">
 						</figure>
 					</div>
 				</div>				
@@ -55,7 +55,5 @@
         #parse('pagelet/IndexJs.html')
 
 		<!-- Own -->
-		<script type="text/javascript" src="${virtualPath}js/js.js"></script>
-
 	</body>
 </html>
