--- a/blog/views/pagelet/TopBanner.html
+++ b/blog/views/pagelet/TopBanner.html
@@ -3,7 +3,7 @@
     #set($archivesActiveClass = '')
     #set($categoryActiveClass = '')
     #set($tagActiveClass = '')
-#elseif('archives' == ${moduleName})
+#elseif('archive' == ${moduleName})
     #set($indexActiveClass = '')
     #set($archivesActiveClass = ' class="active"')
     #set($categoryActiveClass = '')
