--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -48,6 +48,14 @@ body {
 			}
 		}
 	}
+
+	#qrCode {
+		margin-bottom: 20px;
+		img {
+			width: 100px;
+			height: 100px
+		}
+	}
 }
 
 .clearfix {
