--- a/blog/views/user/Login.html
+++ b/blog/views/user/Login.html
@@ -117,7 +117,7 @@
 					showVali(valiResu);
 				}, function (data){
 					if(!data.success) return showVali(data.msg);
-					location.href = $('#logFrm_Email').val().trim() +'/login/success';
+					location.href = data.data.id +'/login/success';
 				}]);
 			}
 
