--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -40,9 +40,19 @@
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-9">
-				<h2>Heading</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="btn" href="#">View details &raquo;</a></p>
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<ol class='breadcrumb'>
+								<li>
+									<div class='glyphicon glyphicon-home'></div>
+									<a href='${virtualPath}index.html'>空间</a></li>
+								<li class='active'>
+									<a>博客</a></li>
+								<li class='active'>
+									<a>发表博文</a></li>
+							</ol>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
