--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -51,6 +51,26 @@
 								<li class='active'>
 									<a>发表博文</a></li>
 							</ol>
+							<form role="form" onsubmit='return false;'>
+								<div class="form-group">
+									<label for="exampleInputEmail1">
+										<b>博客标题</b></label>
+									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="博客标题">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputEmail1">
+										<b>博客摘要</b></label>
+									<textarea class="form-control" rows="3"
+										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
+								</div>
+								<div class="form-group">
+									<label for="exampleInputEmail1">
+										<b>关键字</b></label>
+									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="为你的博客设置关键字，用逗号隔开，最多5个哦">
+								</div>
+								<button type="submit" class="btn btn-primary">提交</button>
+								<button type="button" class="btn btn-success">保存草稿</button>
+							</form>
 						</div>
 					</div>
 				</div>
