--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -2,7 +2,6 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/user/css/register.css?v1' media='screen'>
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
@@ -62,6 +61,22 @@
 										<b>博客摘要</b></label>
 									<textarea class="form-control" rows="3"
 										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
+								</div>
+								<div class="form-group">
+									<label for="exampleInputEmail1">
+										<b>博客正文</b></label>
+									<!-- 加载编辑器的容器 -->
+									<script id="container" name="content" type="text/plain">
+										这里写你的初始化内容
+									</script>
+									<!-- 配置文件 -->
+									<script type="text/javascript" src="${cdn}ueditor/1.4.3/ueditor.config.js"></script>
+									<!-- 编辑器源码文件 -->
+									<script type="text/javascript" src="${cdn}ueditor/1.4.3/ueditor.all.js"></script>
+									<!-- 实例化编辑器 -->
+									<script type="text/javascript">
+										var ue = UE.getEditor('container');
+									</script>
 								</div>
 								<div class="form-group">
 									<label for="exampleInputEmail1">
