--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -47,30 +47,30 @@
 								<li class='active'>
 									<a>发表博文</a></li>
 							</ol>
-							<form role="form" onsubmit='return false;'>
+							<form id='newBlogFrm' role="form" onsubmit='return false;' data-url='new-blog'>
 								<div class="form-group">
-									<label for="exampleInputEmail1">
+									<label for="newBlogFrm_Title">
 										<b>博客标题</b></label>
-									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="博客标题">
+									<input type="text" class="form-control" name='Title' id="newBlogFrm_Title" placeholder="博客标题">
 								</div>
 								<div class="form-group">
-									<label for="exampleInputEmail1">
+									<label for="newBlogFrm_Abstracts">
 										<b>博客摘要</b></label>
-									<textarea class="form-control" rows="3"
+									<textarea class="form-control" rows="3" name='Abstracts' id='newBlogFrm_Abstracts'
 										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
 								</div>
 								<div class="form-group">
-									<label for="exampleInputEmail1">
+									<label for="container">
 										<b>博客正文</b></label>
 									<!-- 加载编辑器的容器 -->
-									<script id="container" name="content" type="text/plain"></script>
+									<script id="container" name="Content" type="text/plain"></script>
 								</div>
 								<div class="form-group">
-									<label for="exampleInputEmail1">
+									<label for="newBlogFrm_Keys">
 										<b>关键字</b></label>
-									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="为你的博客设置关键字，用逗号隔开，最多5个哦">
+									<input type="text" class="form-control" name='Keys' id="newBlogFrm_Keys" placeholder="为你的博客设置关键字，用逗号隔开，最多5个哦">
 								</div>
-								<button type="submit" class="btn btn-primary">提交</button>
+								<button type="button" class="btn btn-primary" id='btn_sub'>提交</button>
 								<button type="button" class="btn btn-success">保存草稿</button>
 							</form>
 						</div>
@@ -93,6 +93,20 @@
 		</script>
 		<!-- Own -->
 		<script type="text/javascript">
+
+			function showVali(valiResu){
+			}
+
+			function subFrm(){
+				$('#newBlogFrm').olxForm('submit', [function(){
+				}, function (valiResu){
+					showVali(valiResu);
+				}, function (data){
+					if(!data.success) return showVali(data.msg);
+				}]);
+			}
+
+			$('#btn_sub').click(subFrm);
 		</script>
 	</body>
 </html>
