--- a/blog/views/pagelet/top10ViewNums.html
+++ b/blog/views/pagelet/top10ViewNums.html
@@ -7,61 +7,61 @@
 			<li class='list-group-item'>
 				<span class='badge'>3313</span>
 				<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='RCP 添加全局快捷键'>
-					<div class='olx-text-ellipsis'>RCP 添加全局快捷键</div>
+					<div>RCP 添加全局快捷键</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2693</span>
 				<a href='/archive/c89ff0c9920e11e3a195b888e3351e26.html' title='【防御阵形：觉醒】完美最后一关布阵'>
-					<div class='olx-text-ellipsis'>【防御阵形：觉醒】完美最后一关布阵</div>
+					<div>【防御阵形：觉醒】完美最后一关布阵</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2679</span>
 				<a href='/archive/c89ff75d920e11e3a195b888e3351e26.html' title='【防御阵形：觉醒】最后一关99波'>
-					<div class='olx-text-ellipsis'>【防御阵形：觉醒】最后一关99波</div>
+					<div>【防御阵形：觉醒】最后一关99波</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2401</span>
 				<a href='/archive/c89ff4e4920e11e3a195b888e3351e26.html' title='使用 JavaWebStart 发布 Eclipse RCP 应用程序'>
-					<div class='olx-text-ellipsis'>使用 JavaWebStart 发布 Eclipse RCP 应用程序</div>
+					<div>使用 JavaWebStart 发布 Eclipse RCP 应用程序</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2331</span>
 				<a href='/archive/c8a089f7920e11e3a195b888e3351e26.html' title='ASP中使用XMLHTTP方式获取XML并与XSL结合解析生成字符串方式'>
-					<div class='olx-text-ellipsis'>ASP中使用XMLHTTP方式获取XML并与XSL结合解析生成字符串方式</div>
+					<div>ASP中使用XMLHTTP方式获取XML并与XSL结合解析生成字符串方式</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2240</span>
 				<a href='/archive/c8a0382e920e11e3a195b888e3351e26.html' title='RCP中创建向导页wizardpage'>
-					<div class='olx-text-ellipsis'>RCP中创建向导页wizardpage</div>
+					<div>RCP中创建向导页wizardpage</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2191</span>
 				<a href='/archive/c8a08bf4920e11e3a195b888e3351e26.html' title='DOM4J 操作 XML'>
-					<div class='olx-text-ellipsis'>DOM4J 操作 XML</div>
+					<div>DOM4J 操作 XML</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>2019</span>
 				<a href='/archive/c8a017ff920e11e3a195b888e3351e26.html' title='Eclipse RCP 工作台生命周期'>
-					<div class='olx-text-ellipsis'>Eclipse RCP 工作台生命周期</div>
+					<div>Eclipse RCP 工作台生命周期</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>1954</span>
 				<a href='/archive/c8a09689920e11e3a195b888e3351e26.html' title='GRASP Information Expert Pattern - Grasp之信息专家模式'>
-					<div class='olx-text-ellipsis'>GRASP Information Expert Pattern - Grasp之信息专家模式</div>
+					<div>GRASP Information Expert Pattern - Grasp之信息专家模式</div>
 				</a>
 			</li>
 			<li class='list-group-item'>
 				<span class='badge'>1944</span>
 				<a href='/archive/c8a0881a920e11e3a195b888e3351e26.html' title='在ASP中调用DLL的方法'>
-					<div class='olx-text-ellipsis'>在ASP中调用DLL的方法</div>
+					<div>在ASP中调用DLL的方法</div>
 				</a>
 			</li>
 		</ul>
