--- a/blog/views/pagelet/top10ViewNums.html
+++ b/blog/views/pagelet/top10ViewNums.html
@@ -3,7 +3,7 @@
 		<h3 class='panel-title'>热门文章</h3>
 	</div>
 	<div class='panel-body'>
-		<ul class='list-group olx-list-group'>
+		<ul class='list-group'>
 			<li class='list-group-item'>
 				<span class='badge'>3313</span>
 				<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='RCP 添加全局快捷键'>
