--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -112,6 +112,13 @@ a {
 	}
 }
 
+.olx-text-ellipsis {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	font-size: 12px;
+}
+
 @font-face {
 	font-family: Spinnaker;
 	font-style:  normal;
