--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class='col-sm-12 col-md-4'>
 					#parse('pagelet/top10ViewNums.html')
-					#parse('pagelet/top10Comments.html')
+					#parse('pagelet/html/top10Comments.html')
 					#parse('pagelet/usefulLinks.html')
 					<div id='qrCode'>
 						<figure>
