--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -106,6 +106,11 @@ a {
 					color: #555555;
 				}
 			}
+			a {
+				&:hover, &:focus {
+					color: #D9534F;
+				}
+			}
 			margin-bottom: 0;
 		}
 		padding: 0;
