--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -36,7 +36,7 @@
 				<div class='col-sm-12 col-md-4'>
 					#parse('pagelet/top10ViewNums.html')
 					#parse('pagelet/html/top10Comments.html')
-					#parse('pagelet/usefulLinks.html')
+					#parse('pagelet/html/usefulLinks.html')
 					<div id='qrCode'>
 						<figure>
 							<img src='${virtualPath}public/assets/images/archive.png' alt='二维码' title='档案馆'>
