--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -73,6 +73,12 @@ a {
 	background-color: #D9534F;
 }
 
+.olx-text-ellipsis {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .olx-panel {
 	.panel-title {
 		font-size: 14px;
@@ -97,11 +103,8 @@ a {
 						color: #D9534F;
 					}
 					div {
+						.olx-text-ellipsis;
 						padding-right: 10px;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-						overflow: hidden;
-						font-size: 12px;
 					}
 					color: #555555;
 				}
@@ -116,12 +119,6 @@ a {
 		}
 		padding: 0;
 	}
-}
-
-.olx-text-ellipsis {
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
 }
 
 @font-face {
