--- a/blog/views/pagelet/TopNavCategory.vm.html
+++ b/blog/views/pagelet/TopNavCategory.vm.html
@@ -1,2 +1,2 @@
-#foreach($category in $categorys)<li><a href="${virtualPath}archive/category/${category.CateName}">$category.CateName</a></li>
+#foreach($category in $topNavCategory)<li><a href='${virtualPath}archive/category/${category.CateName}'>$category.CateName</a></li>
 #end
