--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('pagelet/top10ViewNums.html')
+					#parse('pagelet/html/top10ViewNums.html')
 					#parse('pagelet/html/top10Comments.html')
 					#parse('pagelet/html/usefulLinks.html')
 					<div id='qrCode'>
