--- a/blog/views/pagelet/archiveList.html
+++ b/blog/views/pagelet/archiveList.html
@@ -1,3 +1,4 @@
+<div id='archiveList'>
 <h3>2011年<a id="2011"></a></h3>                                
 <div class="panel-group olx-accordion">
     
@@ -421,4 +422,6 @@
         </div>
     </div>
     
+</div>
+
 </div>
