--- a/blog/views/pagelet/backTop.html
+++ b/blog/views/pagelet/backTop.html
@@ -1,1 +1,1 @@
-<div data-olx-type="olx.backTop" id="backTop" title="回到顶部"></div>
+<div data-olx-type='olx.backTop' id='backTop' title='回到顶部'></div>
