--- a/blog/views/pagelet/ArchiveList.vm.html
+++ b/blog/views/pagelet/ArchiveList.vm.html
@@ -13,9 +13,9 @@
 				<div class='panel-body'>
 					#foreach($article in $archiveChild.Articles)
 					<p>
-						${article.PostTime}日:
-						<a title='创建于 $article.PostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
-						<span class='badge'>${article.ViewCount}</span>
+						${article.PostTime2Day}日:
+						<a title='创建于 $article.sPostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
+						<span class='badge'>${article.ViewCount2Money}</span>
 					</p>#end
 				</div>
 			</div>
