--- a/blog/views/pagelet/ArchiveList.vm.html
+++ b/blog/views/pagelet/ArchiveList.vm.html
@@ -1,9 +1,7 @@
 <div id='archiveList'>
-	#foreach($archive in $archives)
-	<h3>${archive.Y4}年<a id='${archive.Y4}'></a></h3>
-	<div class='panel-group olx-accordion'>
-		#foreach($archiveChild in $archive.ArchiveChildren)
-		<div class='panel panel-default'>
+	#foreach($archive in $archives)<h3>${archive.Y4}年<a id='${archive.Y4}'></a></h3>
+	<div class='panel-group'>
+		#foreach($archiveChild in $archive.ArchiveChildren)<div class='panel panel-default'>
 			<div class='panel-heading'>
 				<h4 class='panel-title'>
 					<a id='${archive.Y4}${archiveChild.M2}' href='#collapse${archive.Y4}${archiveChild.M2}' data-parent='#accordion' data-toggle='collapse'>${archiveChild.M2}月 (${archiveChild.Articles.length}篇文章)</a>
@@ -11,8 +9,7 @@
 			</div>
 			<div id='collapse${archive.Y4}${archiveChild.M2}' class='panel-collapse collapse in'>
 				<div class='panel-body'>
-					#foreach($article in $archiveChild.Articles)
-					<p>
+					#foreach($article in $archiveChild.Articles)<p>
 						${article.PostTime2Day}日:
 						<a title='创建于 $article.sPostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
 						<span class='badge'>${article.ViewCount2Money}</span>
