--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -179,12 +179,22 @@ a {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1010px) {
+	body {
+		#backTop {
+			right: 5px;
+		}
+	}
 	#topSearchFrm {
 		display: none !important;
 	}
 }
 
 @media screen and (max-width: 800px) {
+	body {
+		#backTop {
+			right: 5px;
+		}
+	}
 	#footer {
 		>div {
 			>div {
