--- a/blog/views/pagelet/ArchiveList.vm.html
+++ b/blog/views/pagelet/ArchiveList.vm.html
@@ -1,5 +1,5 @@
 <div id='archiveList'>
-	#foreach($archive in $archives)<h3>${archive.Y4}年<a id='${archive.Y4}'></a></h3>
+	#foreach($archive in $archiveList)<h3>${archive.Y4}年<a id='${archive.Y4}'></a></h3>
 	<div class='panel-group'>
 		#foreach($archiveChild in $archive.ArchiveChildren)<div class='panel panel-default'>
 			<div class='panel-heading'>
