--- a/blog/views/pagelet/Top10ViewNums.vm.html
+++ b/blog/views/pagelet/Top10ViewNums.vm.html
@@ -9,8 +9,7 @@
 				<a href='${virtualPath}archive/${article._id}.html' title='创建于 $article.sPostTime'>
 					<div>$article.Title</div>
 				</a>
-			</li>
-			#end
+			</li>#end
 		</ul>
 	</div>
 </div>
