--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -20,7 +20,7 @@
 							</ol>
 							<div id='tagList'>
 								<div class='panel-group olx-accordion'>
-									#parse('pagelet/tagList.html')
+									#parse('pagelet/html/tagList.html')
 								</div>
 							</div>
 							<div>
