--- a/blog/views/pagelet/TagList.vm.html
+++ b/blog/views/pagelet/TagList.vm.html
@@ -1,15 +1,15 @@
-#foreach($tag in $tags)<div class='panel panel-default'>
+#foreach($tag in $tagList)<div class='panel panel-default'>
 	<div class='panel-heading'>
 		<h4 class='panel-title'>
-			<a id='${tag.TagName}' href='#collapse${tag.Id}' data-parent='#accordion' data-toggle='collapse'>${tag.TagName} (${tag.Articles.length}篇文章)</a>
+			<a id='${tag.TagName}' href='#collapse${tag.TagName}' data-parent='#accordion' data-toggle='collapse'>${tag.TagName} (${tag.Articles.length}篇文章)</a>
 		</h4>
 	</div>
-	<div id='collapse${tag.Id}' class='panel-collapse collapse in'>
+	<div id='collapse${tag.TagName}' class='panel-collapse collapse in'>
 		<div class='panel-body'>
 			#foreach($article in $tag.Articles)<p>
-				${article.PostTime_Year}-${article.PostTime_Month}-${article.PostTime_Day}:
-				<a title='创建于 $article.PostTime_Time' href='${virtualPath}archive/${article.Id}.html'>${article.ArticleTitle}</a>
-				<span class='badge'>${article.ViewNumsToFormat}</span>
+				${article.sPostTimeShort}:
+				<a title='创建于 $article.sPostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
+				<span class='badge'>${article.ViewCount2Money}</span>
 			</p>#end
 		</div>
 	</div>
