--- a/blog/views/user/admin/Sidebar.html
+++ b/blog/views/user/admin/Sidebar.html
@@ -1,6 +1,59 @@
 <div class='col-sm-12 col-md-3'>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
+			<h3 class='panel-title'>个人信息管理</h3>
+		</div>
+		<div class='panel-body'>
+			<ul class='list-group'>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='站内留言'>
+						<div>站内留言</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='修改个人资料'>
+						<div>修改个人资料</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='修改登录密码'>
+						<div>修改登录密码</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='更改头像图片'>
+						<div>更改头像图片</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='空间个性化设置'>
+						<div>空间个性化设置</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='个人隐私设置'>
+						<div>个人隐私设置</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='群动态设置'>
+						<div>群动态设置</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='邮件提醒设置'>
+						<div>邮件提醒设置</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='修改登录邮箱'>
+						<div>修改登录邮箱</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='绑定外部帐号登录'>
+						<div>绑定外部帐号登录</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='勋章管理'>
+						<div>勋章管理</div></a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class='panel panel-default olx-panel'>
+		<div class='panel-heading'>
 			<h3 class='panel-title'>博客管理</h3>
 		</div>
 		<div class='panel-body'>
@@ -13,6 +66,14 @@
 					<span class='badge'>0</span>
 					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='草稿箱'>
 						<div>草稿箱</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='博客设置/分类管理'>
+						<div>博客设置/分类管理</div></a>
+				</li>
+				<li class='list-group-item'>
+					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='博客评论管理'>
+						<div>博客评论管理</div></a>
 				</li>
 				<li class='list-group-item'>
 					<a href='/archive/c8a08e7c920e11e3a195b888e3351e26.html' title='博客导出'>
